test/success/integration/_succ_if_block_imper.hs
main = if True then print "hello1" else print "hello2"