test/fail/integration/_fail_grammar_if_block_imper_2.hs
main = if True then print jil else print "hello"